# trading-bootcamp-platform

./: .dockerignore  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  trades.csv
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  example.env  fly.staging.toml  fly.toml
backend/.sqlx/: query-02fe2f54a55bff4b370c22f06c9e26af5d99d83e39ff667bf269f454fa01c2fd.json  query-05f0e30254859a796c8196aa3a81961a8acf64b496ab10b990e8df7793f7c953.json  query-06e9b18cf89ddffb18a05c2e9f36e6b423bd313bf7689e35dcddc06ffd8a0ebb.json  query-070b51c7f871bf2a3b981fc38d1885af7b5e90ee691e45f5b9798910bd5518d7.json  query-073f2b3ef0ee36abc7855cb802d7d3d2b5c9946811423ba4489d189d9e8752ae.json  query-09438de6b12762b04e28640587be80215d679417ffdb82540296f7ad7b11d3cb.json  query-096770d7e1b93542fc10aefe701072e0894fa727e99436e917a39d9a6985b6fa.json  query-0c58ece2fbb4a67a2c11810c324e37a7cb8b13a40b0d85ae843ea37ceced1220.json  query-0dd149a9f6974a1454eafeca53e9940a0be46fefc2e98062202d287bf6dedbff.json  query-0fd210524a7d8e2af83ba99117689bba6c77efc7b26c9861f429bbec22f95ce5.json  query-0fdcd96e005e76e7a2865e0a44fa57de2d5997e5b34f0f2afa24093161b2a7c6.json  query-1358a72d84aa0e9ad79780d7bc43689333ecea87e91e1a712db01ba683d8fd6e.json  query-14bb47ba54c1dddd43ad34419794908294861fed0bd2752eff2a2e175329199a.json  query-15a97509be0833f27eed60fa679d299dbd0a6b09db1e75c33cd6a91c3d937809.json  query-175928d391c31b7e3fadfc7bd0da1260a6abed73538d8be9a1668eca1dc526d2.json  query-1a2f2348be37aae4148620133088ddf79445a9693c4eb8a790f5d953217b7807.json  query-1ae6ee874d680c08c3e306809f69eaf8c0ae4a357c06b30f474a5e45d3c3170a.json  query-1bff7bbeefe032ee5a76e5e538ea97ebf697cf099ec8ad64ff927736f928adb9.json  query-1df1f4c8418bf04be3a227972c3ae2cce27f557b676e93e967caafb50cd07af2.json  query-1e91845b4d402cd98766a5a16d4867ac88c8a3843f127532cf9ee407450348b0.json  query-2094621f0fc471b5b91a49476035044f41ec0afe9e3c383f385c432aa6aa3166.json  query-209f202ee5ed3705a40e8cadb81da4eb864aa70b3774d6b7cb65cbc4452402f7.json  query-2391ea03c6e0e2dd34873c1caaa026ac790ea6c29645e6f981f52697aaf20b8e.json  query-24ac1cd912426c63fec632d72aa32b74fcef70545c602eae434a67db7f6b5c8c.json  query-26438a7c9646d1d49f88ae98abf27d4d5071e547c7f519b871701600ce8043ef.json  query-26bf0525de6be989e1cae85a686424299a92909f2b2738cd68b23a4b79f06359.json  query-27c4f14d701693ae1805e933165c6d951e9e52341d8e1734cd2c2f85ace27c4e.json  query-27fa274463d29234fa441def9bca4b55824dc9578cc56ab98afc5013b2ff4072.json  query-2908057286dbbfab2922a22a501f9918ba6528fa3c7d3d6d90838a7cebc6064f.json  query-2a272da8af60e149fe9bee0a3c6e79f6999f6c86c8b6c025a6ad0728cda3243c.json  query-2aee5764f1edb57ad37493856dd750ae41601d0f631cc491f2cbdf736ccb3daa.json  query-2d8fb912d64bcea4bb0e96b35c2960f766722575602650e6442c42efc63fa2f0.json  query-2f27e99300d0e631d64100562bb406105e0658b6eb05b8133d93c4bdd7523a8f.json  query-2f71937924bc59a5f16b1ff59ec61e6885b623f3a761e9316a8c5b09125d15de.json  query-2f7771bc38bd80bc9e1447735fb2a616e6481edc7d3e1b0b42d43a5df17cc571.json  query-2fb3a3fee8859709d9ef0a04069a8709daa334d5a95c62eb38fe6c8ca8e5b8a9.json  (+143 more)
python-client/: .gitignore  README.md  all_min_max_bot.py  arb_bot.py  arb_bot_abc.py  arb_bot_def.py  arb_bot_ghi.py  arb_model_bot.py  arbbot.py  arbs_bot.py  broken_arb_bot.ipynb  compile-protos.sh  constants.py  download_data.sh  etf_arbitrage.py  main.ipynb  market_maker_bot.py  min_max_bot.py  moving_avg_bot.py  naive_arbs_bot.py  naive_bot.py  notebook.ipynb  penny_bot.py  price_utils.py  pyproject.toml  research.ipynb  research_demo_20250217.ipynb  streamlit_fe.py  super_arbs_bot.py  untested_noa_arb_bot.ipynb  untested_redeem_bot.ipynb
(+253 files in other folders)
