[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
jsonwebtoken = "9.3.0"
prost = "0.12.6"
prost-types = "0.12.6"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
prost-build = "0.12.6"
