[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
prost = "0.12.6"
prost-types = "0.12.6"
reqwest = { version = "0.12.5", default-features = false, features = [
  "default-tls",
  "charset",
  "http2",
  "macos-system-configuration",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-once-cell = "0.5.3"
sqlx = { version = "0.7.4", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "sqlite",
  "migrate",
  "time",
] }
rust_decimal = "1.35.0"
futures-core = "0.3.30"
itertools = "0.13.0"
fxhash = "0.2.1"
futures = "0.3.30"
rust_decimal_macros = "1.35.0"
async-stream = "0.3.5"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
governor = "0.6.3"
dashmap = "6.0.1"
nonzero_ext = "0.3.0"
utoipa = { version = "4.2.3", features = ["axum_extras", "openapi_extensions"] }

[build-dependencies]
prost-build = "0.12.6"

[lints.clippy]
pedantic = "warn"
