[project]
name = "metagame"
version = "0.2.1"
description = "MetaGame Trading Bootcamp Python Client"
readme = "README.md"
authors = [
    { name = "Yoav Tzfati", email = "yoav.tzfati@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "websockets>=14.1",
    "betterproto>=1.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "betterproto[compiler]>=1.2.5",
    "grpcio-tools>=1.69.0",
    "ipykernel>=6.29.5",
    "ipywidgets==7.7.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "qgrid==1.3.1",
    "typer>=0.15.1",
]
